<resources>
    <string name="app_name">Grou</string>
    <string name="textNotes">Notes</string>
    <string name="textProtectedNotes">Protected Notes</string>
    <string name="textEvent">Event</string>
    <string name="textArchive">Archive</string>
    <string name="textLogin">Login</string>
    <string name="textRegister">Register</string>
    <string name="textQuestion">Question</string>
    <string name="textSettings">Settings</string>
    <string name="textInfo">Info</string>

    <string name="search">Поиск по заметкам</string>
    <string name="open_app">Открываем заметки...</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="notes">Заметки</string>
    <string name="lock">Защищенные заметки</string>
    <string name="event">События</string>
    <string name="archive">Архив</string>
    <string name="login">Вход</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="FAQ">Задать вопрос</string>
    <string name="settings">Настройки</string>
    <string name="info">Информация</string>
    <string name="main_fun">Основные функции</string>
    <string name="profile">Профиль</string>
    <string name="other">Другое</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>